# energy-app

./: .bandit  .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_ADOPTION_SUCCESS_ANALYSIS.md  CC_FEEDBACK_ON_CLAUDE_INVENTARISATIE.md  CC_PLAN_TENNET_BYO_MIGRATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_BORGING_PERFORMANCE.md  CLAUDE_CODE_EXECUTE_NOW.md  CLAUDE_CODE_F7_HARDENING.md  CLAUDE_CODE_LOADTEST.md  CLAUDE_CODE_OPTIMIZATION.md  CLAUDE_CODE_PHASE2_TEMPLATES.md  CLAUDE_CODE_PHASE3_INSTALLER.md  CLAUDE_CODE_PHASE4_DOCUMENTATION.md  CLAUDE_CODE_REFACTOR_INSTRUCTIONS.md  CLAUDE_CODE_SSL_SETUP.md  CLAUDE_CODE_TASK_BACKFILL_SCRIPT.md  COMPETITIVE_THREAT_AND_MOAT_ANALYSIS.md  CONTRIBUTING.md  DOCS.md  ENERGY_CHARTS_QUICK_START.txt  FASE_1_COMPLETION_REPORT.md  FASE_2_COMPLETION_REPORT.md  FASE_3_SPECIFICATION.md  GITHUB_AUTOMATION_SUMMARY.md  LICENSE  LOAD_TEST_REPORT.md  LOG_PATH_CONSISTENCY_TASK.md  MONITORING_PROJECT_OVERVIEW.md  Makefile  OPSCHONING_PLAN.md  OPTIMIZATION_RESULTS.md  PHASE_1_EXECUTION_CHECKLIST.md  README.md  REALISTIC_BUSINESS_VALUATION_2026.md  SYNCTACLES_CLEANUP_TASK.md  (+31 more)
.claude/: settings.local.json
.github/: dependabot.yml
alembic/: env.py
config/: settings.py
deploy/: PROD_DEPLOYMENT.md  README.md  deploy-to-prod.sh  deploy-via-github.sh  install.sh
deployment/: deploy.sh  infra-deploy.sh  pre-deploy-checks.sh  rollback.sh  sync-manifest.txt
docs/: ARCHITECTURE.md  BRAINS-ARCHITECTURE.md  BRAINS-TROUBLESHOOTING.md  CREDENTIALS.md  DAG2_CACHING_TASK.md  DEPLOYMENT_SCRIPTS_GUIDE.md  ENDPOINT_ROUTING_AUDIT.md  (+48 more)
(+675 files in other folders)
